@@ -1,7 +1,8 @@
 package com.bbmore.admin.adelivery.service;
 
+
 import com.bbmore.admin.adelivery.repository.adeliveryRepository;
-import com.bbmore.admin.aorder.dto.OrderSearchResultDTO;
+import com.bbmore.admin.aorder.dto.aOrderSearchResultDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -14,12 +15,19 @@ public class adeliveryService {
 
     private final adeliveryRepository adeliveryRepository;
 
-    public List<OrderSearchResultDTO> searchOrders(String code, String name, String phone,
-                                                   LocalDate startDate, LocalDate endDate) {
-        String c = (code == null || code.isBlank()) ? null : code;
-        String n = (name == null || name.isBlank()) ? null : name;
-        String p = (phone == null || phone.isBlank()) ? null : phone;
+    public List<aOrderSearchResultDTO> searchOrders(String code, String name, String phone,
+                                                    LocalDate startDate, LocalDate endDate) {
+        Integer parsedCode = null;
+        if (code != null && !code.trim().isEmpty()) {
+            try {
+                parsedCode = Integer.parseInt(code.trim());
+            } catch (NumberFormatException e) {
+                // 로그만 남기고 무시하거나 예외 처리 가능
+                throw new IllegalArgumentException("잘못된 주문번호 형식입니다. 숫자만 입력해주세요.");
+            }
+        }
 
-        return adeliveryRepository.findOrderDetails(c, n, p, startDate, endDate);
+        return adeliveryRepository.findOrderDetails(parsedCode, name, phone, startDate, endDate);
     }
+
 }
